K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: demo
  labels:
    app: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
      annotations:
        sidecar.istio.io/inject: "true"
        traffic.sidecar.istio.io/includeInboundPorts: "50051,8080"
    spec:
      containers:
      - name: nodejs-app
        image: 29trxngxx/nodejs-app:latest
        ports:
        - containerPort: 50051
        - containerPort: 8080
        command: ["sh", "-c", "npm install && npm start"]
