K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: demo
  labels:
    app: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: NodePort
