K8S/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-app-service
  namespace: demo
spec:
  hosts:
  - nodejs-app-service.demo.svc.cluster.local
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: nodejs-app-service.demo.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodejs-app-service
  namespace: demo
spec:
  host: nodejs-app-service.demo.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
